--- a/le-ui/projects/leadprioritization/assets/styles/main.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/main.scss
@@ -141,7 +141,7 @@ span.logo {
 }
 
 #topPredictorAttributeHover {
-    position: absolute;
+    position: fixed;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -276,129 +276,6 @@ a#back-to-summary-link:hover {
 
 .login-footer {
   color: white;
-}
-
-/*
-Model list title
-*/
-
-.model-title h2 {
-  background: transparent;
-}
-
-.model-title h2:hover {
-    background: transparent;
-}
-
-.model-title h2.model-name-editable {
-  background: url(../images/ico-pencil.png) no-repeat top right;
-}
-
-.model-title h2.model-name-editable:hover {
-    background: url(../images/ico-pencil-hover.png) no-repeat top right;
-}
-
-.model-title h2.edit {
-  right: 0px;
-  top: 0px;
-  padding-right: 0;
-}
-
-.model-menu {
-  position: absolute;
-  right: 0;
-  background: #222;
-  padding: 10px 0;
-  font-size: 16px;
-  -webkit-border-bottom-left-radius: 6px; 
-  -moz-border-bottom-left-radius: 6px; 
-  border-bottom-left-radius: 6px; 
-  -webkit-border-top-left-radius: 6px; 
-  -moz-border-top-left-radius: 6px; 
-  border-top-left-radius: 6px; 
-  font-family:'ProximaNova-Regular','Open Sans',sans-serif;
-  li {
-    display: block;
-    list-style: none;
-    padding: 0.3em 1em;
-    text-align: right;
-    color: #eee;
-    white-space: nowrap;
-    &:hover {
-      background: #444;
-      transition: none;
-      color: #f16a22;
-    }
-    i {
-      color: #999;
-      margin-left: .5em;
-      width: 1em;
-      text-align: center;
-      vertical-align: middle;
-    }
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-  }
-  a:link, a:visited {
-    color: #fff;
-  }
-}
-
-.model-title .edit button {
-    padding: 0.5em 0.75em 0.35em 0.8em;
-    margin-right: 0;
-    font-size: larger;
-    transition: all 0s linear;
-    background-color: transparent;
-    border: 0;
-    border-bottom-width: 1px;
-
-  &:hover {
-    * {
-      color: #f16a22;
-    }
-  }
-
-  span, span:after, span:before {
-    transition: background 0s linear, color 0s linear;
-  }
-}
-
-.model-title .edit button.open {
-    background: #222;
-    color: #fff;
-    border-radius: 2px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-
-    &:hover * {
-      color: #fff;
-    }
-}
-
-.model-title .editableform {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-
-.model-title .editableform .control-group {
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0;
-  border: #486d99 solid 2px;
-}
-
-.model-title .popover-title {
-  margin: -10px -16px 8px -16px;
-}
-
-
-.model-error {
-  border-radius: 4px 4px 4px 4px;
-  margin-top: 0.5em;
 }
 
 /*
